# temper

./: .editorconfig  .gitignore  .pylintrc  badness_list.txt  convergents.py  convergents_brun.py  diophantine.py  example.py  example_commas.py  example_fokker.py  example_optimize.py  farey.py  flask_app.py  hsnf_test.py  info.py  list1.txt  list_all.py  list_all_2_3.py  list_all_maxnorm.py  main.py  names.py  parse.py  parsetest.py  plot.py  process_names.py  pull.sh  pyproject.toml  readme.md  reduce_commas.py  requirements.txt  scratchpad.py  scratchpad2.py  search.py  search_1_53__2_3_5.py  search_1_53__2_3_5_out.txt  temper.py  test10.py  test11.py  test12.py  test13.py  (+22 more)
graveyard/: plot.py  scratchpad.py  scratchpad2.py  test.py  test14.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
lib_temper/: __init__.py  combo.py  diophantine.py  diophantine_sympy.py  farey.py  hnf_bigint.py  interval.py  olll.py  optimize.py  primes.py  subgroup.py  temper.py  util_types.py
names/: 2_3.txt  2_3_11.txt  2_3_5.txt  2_3_7.txt  genes
res/: names.json
static/: basic.css
templates/: katex.html  result.html  result.jinja  search.html  search.jinja  search_results.jinja  temper.html  temper.jinja
wiki/: pages.py  parse_ratios.py  ratios.py  scrape.py
